--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,14 @@ python-multipart
 pydub
 torch
 torchaudio
+librosa
+transformers
+accelerate
+einops
+onnxruntime
+psutil
+# Testing
+pytest
+pytest-asyncio
+httpx
 # huggingface_hub is required for download_models logic if used, but we use pre-downloaded
