feat: add standalone mode, hf model downloader, and system manager
- Decoupled from ComfyUI dependency: added QWEN_MODELS_DIR and local models/ fallback.
- Implemented Hugging Face model downloader for all required Qwen-TTS components.
- Added 'System Manager' view to monitor health, resources, and manage model inventory.
- Integrated all synthesis enhancements (Voice Mixing, Voice Changer, Multi-language, Gaps).
- Updated documentation and environment examples for standalone setup.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# Path to your ComfyUI models folder (where 'qwen-tts' subfolder is located)
-COMFY_QWEN_MODELS_DIR=C:\Path\To\ComfyUI\models\qwen-tts
+# Path to your Qwen-TTS models folder.
+# Defaults to a 'models' directory in the project root if not set.
+QWEN_MODELS_DIR=./models
