Change auto-merge condition to new GitHub actor

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    if: github.actor == 'google-labs-jules'
+    if: github.actor == 'WenYuHo'
 
     steps:
       - name: Enable auto merge
