--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     if: github.actor == 'WenYuHo'
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Enable auto merge
         run: gh pr merge ${{ github.event.pull_request.number }} --auto --squash
         env:
