--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,15 @@ on:
 jobs:
   automerge:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      contents: write
     if: github.actor == 'WenYuHo'
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Enable auto merge
         run: gh pr merge ${{ github.event.pull_request.number }} --auto --squash
         env:
