refactor: Consolidate setup scripts and requirements into unified Studio launcher

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,10 @@ beautifulsoup4
 huggingface_hub
 moviepy
 Pillow
+
+# --- Optional: Video Generation (LTX-Video) ---
+# Install these separately or via studio.bat
+ltx-pipelines
+diffusers
+opencv-python
+tqdm
